--- a/index.html
+++ b/index.html
@@ -1,73 +1,126 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href = "style.css" type="text/css" rel="stylesheet">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-   <!-- Add icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Maps -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWjfBM5d5WcDLyVtMbPQWDcimPDYPKjP4&callback=initMap"
-   async defer></script>
-   <script src="https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=-33.8670,151.1957&radius=500&types=food&name=cruise&key=AIzaSyCviG8_8ONLT8vnWtV8UrQ4ocwEGlWEpmY">
-   </script>
-   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjSAFcX7oTIpujhOhNKtBhT2wSoV5WhHU&libraries=places"></script>
-    <title> Sight Seeing </title>
-    <meta charset= "utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script>
+
+<head>
+  <link href="style.css" type="text/css" rel="stylesheet">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <!-- Add icon library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Maps -->
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWjfBM5d5WcDLyVtMbPQWDcimPDYPKjP4&callback=initMap"
+   async defer></script> -->
+  <!-- <script src="https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=-33.8670,151.1957&radius=500&types=food&name=cruise&key=AIzaSyCviG8_8ONLT8vnWtV8UrQ4ocwEGlWEpmY"> -->
+  </script>
+  <title> Sight Seeing </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script>
     var map;
     var infoWindow;
     var pos;
+    console.log("In Script");
+    // initMap();
     function initMap() {
-       map = new google.maps.Map(document.getElementById('map'), {
-         center: {lat: -34.397, lng: 150.644},
-         zoom: 20
-       });
+      console.log("Initializing map");
+      map = new google.maps.Map(document.getElementById('map'), {
+        center: {
+          lat: -34.397,
+          lng: 150.644
+        },
+        zoom: 20
+      });
 
-       infoWindow = new google.maps.InfoWindow({map: map});
-       if (navigator.geolocation) {
-         navigator.geolocation.getCurrentPosition(function(position) {
-           pos = {
-             lat: position.coords.latitude,
-             lng: position.coords.longitude
-           };
+      infoWindow = new google.maps.InfoWindow({
+        map: map
+      });
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(position) {
+            pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
 
-           infoWindow.setPosition(pos);
-           infoWindow.setContent('You are here');
-           map.setCenter(pos);
-         },
-         function() {
-           handleLocationError(true, infoWindow, map.getCenter());
-         });
-       } else {
-         // Browser doesn't support Geolocation
-         handleLocationError(false, infoWindow, map.getCenter());
-       }
+            infoWindow.setPosition(pos);
+            infoWindow.setContent('You are here');
+            map.setCenter(pos);
+            startSearch(pos);
+          },
+          function() {
+            handleLocationError(true, infoWindow, map.getCenter());
+          });
+      } else {
+        // Browser doesn't support Geolocation
+        handleLocationError(false, infoWindow, map.getCenter());
+      }
 
-     }
+      //get locations
+    }
 
-     function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-       infoWindow.setPosition(pos);
-       infoWindow.setContent(browserHasGeolocation ?
-                             'Error: The Geolocation service failed.' :
-                             'Error: Your browser doesn\'t support geolocation.');
-     }
-     
-    </script>
-  </head>
-  <body>
-    <h3>Sights Around Me</h3>
-    <div id="map"></div>
-    <script async defer
+    function startSearch(pos) {
+      console.log("Starting Search");
+      var pyrmont = {
+        lat: -33.867,
+        lng: 151.195
+      };
+      var service = new google.maps.places.PlacesService(map);
+      var request = {
+        location: pos,
+        radius: 500,
+        type: ['store']
+      };
+      console.log("Before nearbySearch function");
+      service.nearbySearch(request, callback);
+    }
+
+    function callback(results, status) {
+      console.log("Callback to Search");
+      if (status === google.maps.places.PlacesServiceStatus.OK) {
+        console.log("status === google.maps.places.PlacesServiceStatus.OK");
+        console.log(results);
+        for (var i = 0; i < results.length; i++) {
+          createMarker(results[i]);
+        }
+      }
+    }
+
+    function createMarker(place) {
+      var placeLoc = place.geometry.location;
+      ne
+      var marker = new google.maps.Marker({
+        map: map,
+        position: place.geometry.location
+      });
+
+      google.maps.event.addListener(marker, 'click', function() {
+        infowindow.setContent(place.name);
+        infowindow.open(map, this);
+      });
+    }
+
+    function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+      infoWindow.setPosition(pos);
+      infoWindow.setContent(browserHasGeolocation ?
+        'Error: The Geolocation service failed.' :
+        'Error: Your browser doesn\'t support geolocation.');
+    }
+  </script>
+</head>
+
+<body>
+  <h3>Sights Around Me</h3>
+  <div id="map"></div>
+  <!-- <script async defer
    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjSAFcX7oTIpujhOhNKtBhT2wSoV5WhHU&callback=initMap">
-   </script>
-   <!-- <script async defer
+   </script> -->
+  <!-- <script async defer
   src="https://maps.googleapis.com/maps/api/place/textsearch/json?query=TopSights&location=42.3675294,-71.186966&radius=10000&type=Sights&keyword=TopSights&key=AIzaSyDjSAFcX7oTIpujhOhNKtBhT2wSoV5WhHU">
   </script> -->
-  </body>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjSAFcX7oTIpujhOhNKtBhT2wSoV5WhHU&libraries=places&callback=initMap"></script>
+</body>
+
 </html>
